--- a/SS2I/pom.xml
+++ b/SS2I/pom.xml
@@ -146,10 +146,10 @@
                 </configuration>
             </plugin>
               <plugin>
-         			 <groupId>org.apache.tomcat.maven</groupId>
-        			 <artifactId>tomcat8-maven-plugin</artifactId>
-         			 <version>2.2</version>
-        		</plugin>
+ 				 <groupId>org.eclipse.jetty</groupId>
+  				<artifactId>jetty-maven-plugin</artifactId>
+  				<version>9.2.7.v20150116</version>
+			</plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
