--- a/SS2I/pom.xml
+++ b/SS2I/pom.xml
@@ -206,6 +206,21 @@
     <artifactId>postgresql</artifactId>
     <version>9.4.1208.jre7</version>
 </dependency>   
+
+
+<!-- Jackson -->
+
+	<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.6.3</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.10</version>
+		</dependency>
 	</dependencies>
     <build>
         <plugins>
